--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,42 +1,210 @@
+<style>
+    html {
+        height: 100%;
+    }
+    body {
+        margin:0;
+        padding:0;
+        font-family: sans-serif;
+        background: linear-gradient(#141e30, #243b55);
+    }
+
+    .register-box {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 400px;
+        padding: 40px;
+        transform: translate(-50%, -50%);
+        background: rgba(0,0,0,.5);
+        box-sizing: border-box;
+        box-shadow: 0 15px 25px rgba(0,0,0,.6);
+        border-radius: 10px;
+    }
+
+    .register-box h2 {
+        margin: 0 0 30px;
+        padding: 0;
+        color: #fff;
+        text-align: center;
+    }
+
+    .register-box .user-box {
+        position: relative;
+    }
+
+    .register-box .user-box input {
+        width: 100%;
+        padding: 10px 0;
+        font-size: 16px;
+        color: #fff;
+        margin-bottom: 30px;
+        border: none;
+        border-bottom: 1px solid #fff;
+        outline: none;
+        background: transparent;
+    }
+    .register-box .user-box label {
+        position: absolute;
+        top:0;
+        left: 0;
+        padding: 10px 0;
+        font-size: 16px;
+        color: #fff;
+        pointer-events: none;
+        transition: .5s;
+    }
+
+    .register-box .user-box input:focus ~ label,
+    .register-box .user-box input:valid ~ label {
+        top: -20px;
+        left: 0;
+        color: #03e9f4;
+        font-size: 12px;
+    }
+
+    .register-box form a {
+        position: relative;
+        display: inline-block;
+        padding: 10px 20px;
+        color: #03e9f4;
+        font-size: 16px;
+        text-decoration: none;
+        text-transform: uppercase;
+        overflow: hidden;
+        transition: .5s;
+        margin-top: 40px;
+        letter-spacing: 4px
+    }
+
+    .register-box a:hover {
+        background: #03e9f4;
+        color: #fff;
+        border-radius: 5px;
+        box-shadow: 0 0 5px #03e9f4,
+        0 0 25px #03e9f4,
+        0 0 50px #03e9f4,
+        0 0 100px #03e9f4;
+    }
+
+    .register-box a span {
+        position: absolute;
+        display: block;
+    }
+
+    .register-box a span:nth-child(1) {
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(90deg, transparent, #03e9f4);
+        animation: btn-anim1 1s linear infinite;
+    }
+
+    @keyframes btn-anim1 {
+        0% {
+            left: -100%;
+        }
+        50%,100% {
+            left: 100%;
+        }
+    }
+
+    .register-box a span:nth-child(2) {
+        top: -100%;
+        right: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(180deg, transparent, #03e9f4);
+        animation: btn-anim2 1s linear infinite;
+        animation-delay: .25s
+    }
+
+    @keyframes btn-anim2 {
+        0% {
+            top: -100%;
+        }
+        50%,100% {
+            top: 100%;
+        }
+    }
+
+    .register-box a span:nth-child(3) {
+        bottom: 0;
+        right: -100%;
+        width: 100%;
+        height: 2px;
+        background: linear-gradient(270deg, transparent, #03e9f4);
+        animation: btn-anim3 1s linear infinite;
+        animation-delay: .5s
+    }
+
+    @keyframes btn-anim3 {
+        0% {
+            right: -100%;
+        }
+        50%,100% {
+            right: 100%;
+        }
+    }
+
+    .register-box a span:nth-child(4) {
+        bottom: -100%;
+        left: 0;
+        width: 2px;
+        height: 100%;
+        background: linear-gradient(360deg, transparent, #03e9f4);
+        animation: btn-anim4 1s linear infinite;
+        animation-delay: .75s
+    }
+
+    @keyframes btn-anim4 {
+        0% {
+            bottom: -100%;
+        }
+        50%,100% {
+            bottom: 100%;
+        }
+    }
+
+
+</style>
+
+<script>
+    $(document).ready(function(){
+        $(document).on("click",".register-btn",function(){
+            var form = $(this).closest("form");
+            form.submit();
+        });
+    });
+</script>
 <th:block>
-    <form th:method="POST" th:action="@{/register}" style="margin-top: 7.5%;">
-        <div class="container d-flex justify-content-center p-5">
-            <div class="row w-50 p-3" style="background-color:#25393f; border:2px solid gray;border-radius: 20px;">
-                <div class="col col-12 text-center d-flex justify-content-center">
-                    <h1 style="color: whitesmoke;">Register</h1>
-                </div>
-                <div class="col col-12 text-center d-flex justify-content-center">
-                    <p class="text-center" style="color:whitesmoke;">Please enter your registration info.</p>
-                </div>
-                <th:block class="col col-12 text-center" th:if="${hasError}">
-                    <p class="text-danger" th:text="${error}"></p>
-                </th:block>
-                </br>
-                <div class="col col-12 d-flex flex-column text-center align-items-center">
-                    <h6 style="color: whitesmoke;">Username</h6>
-                    <input type="text" name="username" style="text-align: center;border:1px solid deepskyblue;"
-                           class="w-75 form-rounded form-control rounded required"
-                           placeholder="Username..."/>
-                </div>
-                <div class="col col-12 d-flex flex-column  text-center align-items-center">
-                    <h6 style="color: whitesmoke;">Password</h6>
-                    <input type="password" name="password" style="text-align: center;border:1px solid deepskyblue;"
-                           class="w-75 form-rounded form-control rounded required"
-                           placeholder="Password..."/>
-                </div>
-                <div class="col mt-2 col-12 d-flex flex-column  text-center align-items-center">
-                    <input type="number" name="age"
-                           style="text-align: center;border:1px solid deepskyblue;"
-                           class="w-75 form-rounded form-control rounded required"
-                           placeholder="Your age..."/>
-                </div>
-                <div class="col col-12 mt-3 d-flex justify-content-center justify-content-around">
-                    <button class="btn btn-primary" style="background-color:deepskyblue;">Register</button>
-                </div>
-                <div class="col col-12 mt-3 d-flex justify-content-end">
-                    <a href="/login">Already have an account?</a>
-                </div>
-            </div>
+
+<div class="register-box">
+    <h2>Register</h2>
+    <form th:method="POST" th:action="@{/register}" >
+        <div class="user-box">
+            <input type="text" name="username" required="">
+            <label>Username</label>
         </div>
+        <div class="user-box">
+            <input type="password" name="password" required="">
+            <label>Password</label>
+        </div>
+        <div class="user-box">
+            <input type="text" name="age" required="">
+            <label>Your Age</label>
+        </div>
+        <th:block class="col col-12 text-center" th:if="${hasError}">
+            <p class="text-danger" th:text="${error}"></p>
+        </th:block>
+        <a href="javascript:void(0)" class="register-btn" type="submit">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            Submit
+        </a>
     </form>
+</div>
 </th:block>
