--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -33,7 +33,7 @@
                     <li class="" sec:authorize="isAuthenticated()">
                         <a th:href="@{'/anti-police?filter=mostSubmitted'}">
                             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-                            MostSubmitted
+                            MostCommon
                         </a>
                     </li>
                     <li class="" sec:authorize="isAuthenticated()">
